<resources>
    <string name="app_name">PFare Passenger</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>

    <string name="terms_and_conditions1">By continuing,I confirm I have read &amp; agreed to the</string>
    <string name="textview_terms_and_conditions">Terms &amp; conditions</string>
    <string name="textview_and">and</string>
    <string name="textview_privacy_policy">Privacy Policy</string>
    <string name="noInternetAvailable">No internet available</string>
    <string name="err_msg_first_name">Enter First Name</string>

    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="err_msg_last_name">Enter Last Name</string>
    <string name="err_msg_email">Enter Email</string>
    <string name="err_msg_password">Enter password. Password should be a minimum of 8 characters, contain at least one upper case letter, a number and a special character</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
